--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
                         <div class = "skillList" id = "mySkills">
                             <img src="images/about/skillSets/c.png" alt="c" width = "50%" height = "auto">
                             <img src="images/about/skillSets/html.png" alt="html" width = "50%" height = "auto">
-                            <img src="images/about/skillSets/git.png" alt="git" width = "50%" height = "auto">
                             <img src="images/about/skillSets/css.png" alt="css" width = "50%" height = "auto">
                             <img src="images/about/skillSets/cpp.png" alt="cpp" width = "50%" height = "auto">
                             <img src="images/about/skillSets/js.png" alt="javascript" width = "50%" height = "auto">
-                            <img src="images/about/skillSets/github.png" alt="github" width = "50%" height = "auto">
-                            <img src="images/about/skillSets/windows.png" alt="windows" width = "50%" height = "auto">
+                            <img src="images/skillIcons/react.png" alt="react" width = "50%" height = "auto">
+                            <img src="images/skillIcons/java.png" alt="java" width = "50%" height = "auto">
+                            <img src="images/skillIcons/spring.png" alt="spring" width = "50%" height = "auto">
+                            <img src="images/skillIcons/hibernate.png" alt="hibernate" width = "50%" height = "auto">
+                            <img src="images/skillIcons/maven.png" alt="maven" width = "50%" height = "auto">
+                            <img src="images/skillIcons/mysql.png" alt="mysql" width = "50%" height = "auto">
+                            <img src="images/about/skillSets/git.png" alt="git" width = "50%" height = "auto">
+                            <img src="images/skillIcons//githubimg.png" alt="github" width = "50%" height = "auto">
                         </div>
                     </div>
                 </div>
@@ -104,6 +109,7 @@
                     <img src="images/about/bubble.png" alt="bubble" width = "30%" height = "auto">
                     <img src="images/about/flake.png"  alt="flake" width = "45%" height = "auto">
                     <img src="images/about/bubble.png" alt="bubble" width = "20%" height = "auto">
+                    
                 </div>
 
             </div>
